--- a/assets/css/globe.css
+++ b/assets/css/globe.css
@@ -159,13 +159,10 @@ body,
 } */
 
 .globeDotsSection {
-    background-color: chartreuse; 
+    /* background-color: chartreuse;  */
     display: flex; 
     flex-direction: row; 
     justify-content: center;
-    /* width: 100%;
-    height: 100%;
-    position: relative; */
 } 
 
 .globeDots .globe-canvas {
@@ -176,8 +173,7 @@ body,
 }
 
 .js-globe {
-    background-color: darkturquoise;
-
+    /* background-color: darkturquoise; */
 }
 
 .globeDots svg {
@@ -200,7 +196,7 @@ body,
   margin: auto;
   transform: scale(0.5);
   transition: opacity 1s ease-out 1.6s, transform 1s ease-out 1.6s;
-  background-color: gold;
+  /* background-color: gold; */
   display: flex;
   flex-direction: row;
   justify-content: center;
